kotlin-ide/idea/testData/compiler/loadJava/compiledKotlin/fromLoadJava/kotlinSignature/error/WrongValueParameterStructure2.kt
package test

import java.util.*

public open class WrongValueParameterStructure2 {
    public open fun foo(p0 : String?, p1 : List<Map.Entry<String, String>>?) : String? = ""
}
